# ai_medical_rep_summarizer

./: .gitignore  LICENSE  README.md
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py  schemas.py
backend/app/core/: config.py  deps.py  security.py
backend/app/models/: models.py
backend/app/routers/: auth.py  reports.py
backend/app/services/: ai_summarization.py  document_processing.py  storage.py
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: auth.js  client.js  reports.js
frontend/src/components/: FileUpload.jsx  Navbar.jsx  ProtectedRoute.jsx  ReportList.jsx  Toast.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx  ReportDetail.jsx
